--- a/index.html
+++ b/index.html
@@ -99,31 +99,36 @@
 
   <section id="menu" class="menu-section">
     <div class="menu-category">
-      <h2>Coxinha – R$5,00</h2>
-      <div class="item">Charque <button onclick="addToCart('Coxinha de Charque', 5)">Adicionar</button></div>
-      <div class="item">Frango com queijo <button onclick="addToCart('Coxinha Frango com Queijo', 5)">Adicionar</button></div>
-      <div class="item">Frango com catupiry <button onclick="addToCart('Coxinha Frango com Catupiry', 5)">Adicionar</button></div>
+      <h2>Coxinha – R$4,99</h2>
+      <div class="item">Frango com queijo <button onclick="addToCart('Coxinha Frango com Queijo', 4,99)">Adicionar</button></div>
+      <div class="item">Frango com catupiry <button onclick="addToCart('Coxinha Frango com Catupiry', 4,99)">Adicionar</button></div>
     </div>
 
     <div class="menu-category">
-      <h2>Pastel – R$6,00</h2>
-      <div class="item">Misto <button onclick="addToCart('Pastel Misto', 6)">Adicionar</button></div>
-      <div class="item">Carne <button onclick="addToCart('Pastel de Carne', 6)">Adicionar</button></div>
-      <div class="item">Frango com requeijão <button onclick="addToCart('Pastel Frango com Requeijão', 6)">Adicionar</button></div>
-      <div class="item">Queijo <button onclick="addToCart('Pastel de Queijo', 6)">Adicionar</button></div>
+      <h2>Pastel – R$5,99</h2>
+      <div class="item">Misto <button onclick="addToCart('Pastel Misto', 5,99)">Adicionar</button></div>
+      <div class="item">Frango com Catupiry <button onclick="addToCart('Pastel Frango com Catupiry', 5,99)">Adicionar</button></div>
+      <div class="item">Queijo <button onclick="addToCart('Pastel de Queijo', 5,99)">Adicionar</button></div>
     </div>
 
     <div class="menu-category">
-      <h2>Enroladinho – R$5,00</h2>
-      <div class="item">Salsicha <button onclick="addToCart('Enroladinho de Salsicha', 5)">Adicionar</button></div>
-      <div class="item">Presunto e queijo <button onclick="addToCart('Enroladinho Presunto e Queijo', 5)">Adicionar</button></div>
+      <h2>Enroladinho – R$4,99</h2>
+      <div class="item">Salsicha <button onclick="addToCart('Enroladinho de Salsicha', 4,99)">Adicionar</button></div>
+      <div class="item">Presunto e queijo <button onclick="addToCart('Enroladinho Presunto e Queijo', 4,99)">Adicionar</button></div>
     </div>
 
+    <div class="menu-category">
+      <h2>Mini salgados</h2>
+      <div class="item">10 mini Salgados – R$4,99 <button onclick="addToCart('10 mini Salgados', 4,99)">Adicionar</button></div>
+      <div class="item">20 mini Salgados – R$9,99 <button onclick="addToCart('20 mini Salgados', 9,99)">Adicionar</button></div>
+      <div class="item">30 mini Salgados – R$14,99 <button onclick="addToCart('30 mini Salgados', 14,99)">Adicionar</button></div>
+    </div>
+    
     <div class="menu-category">
       <h2>Bebidas</h2>
-      <div class="item">Caçulinha – R$2,50 <button onclick="addToCart('Caçulinha', 2.5)">Adicionar</button></div>
-      <div class="item">Guaraná 1L – R$5,00 <button onclick="addToCart('Guaraná 1L', 5)">Adicionar</button></div>
-      <div class="item">Pepsi 1L – R$5,00 <button onclick="addToCart('Pepsi 1L', 5)">Adicionar</button></div>
+      <div class="item">Caçulinha – R$2,49 <button onclick="addToCart('Caçulinha', 2.49)">Adicionar</button></div>
+      <div class="item">Guaraná 1L – R$4,99 <button onclick="addToCart('Guaraná 1L', 4,99)">Adicionar</button></div>
+      <div class="item">Pepsi 1L – R$4,99 <button onclick="addToCart('Pepsi 1L', 4,99)">Adicionar</button></div>
     </div>
   </section>
 
