--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Salgados Que Sabor</title>
+  <title>Salgateria Que Sabor</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; background: #fff8e7; color: #333; }
     header { background: #ff4d00; padding: 20px; text-align: center; color: white; font-size: 2.5em; font-weight: bold; }
@@ -86,7 +86,7 @@
   </style>
 </head>
 <body>
-  <header>SALGADOS QUE SABOR</header>
+  <header>SALGATERIA QUE SABOR</header>
   <nav>
     <a href="#menu">Cardápio</a>
     <a href="#contato">Contato</a>
@@ -102,6 +102,7 @@
       <h2>Coxinha – R$4,99</h2>
       <div class="item">Frango com queijo <button onclick="addToCart('Coxinha Frango com Queijo', 4,99)">Adicionar</button></div>
       <div class="item">Frango com catupiry <button onclick="addToCart('Coxinha Frango com Catupiry', 4,99)">Adicionar</button></div>
+      <div class="item">Bola Mista – R$4,99 <button onclick="addToCart('Bola mista', 4,99)">Adicionar</button></div>
     </div>
 
     <div class="menu-category">
@@ -114,14 +115,16 @@
     <div class="menu-category">
       <h2>Enroladinho – R$4,99</h2>
       <div class="item">Salsicha <button onclick="addToCart('Enroladinho de Salsicha', 4,99)">Adicionar</button></div>
-      <div class="item">Presunto e queijo <button onclick="addToCart('Enroladinho Presunto e Queijo', 4,99)">Adicionar</button></div>
     </div>
 
     <div class="menu-category">
       <h2>Mini salgados</h2>
-      <div class="item">10 mini Salgados – R$4,99 <button onclick="addToCart('10 mini Salgados', 4,99)">Adicionar</button></div>
-      <div class="item">20 mini Salgados – R$9,99 <button onclick="addToCart('20 mini Salgados', 9,99)">Adicionar</button></div>
-      <div class="item">30 mini Salgados – R$14,99 <button onclick="addToCart('30 mini Salgados', 14,99)">Adicionar</button></div>
+      <div class="item">10 mini Salgados – R$4.99 <button onclick="addToCart('10 mini Salgados', 4,99)">Adicionar</button></div>
+      <div class="item">20 mini Salgados – R$9.99 <button onclick="addToCart('20 mini Salgados', 9,99)">Adicionar</button></div>
+      <div class="item">30 mini Salgados – R$14.99 <button onclick="addToCart('30 mini Salgados', 14,99)">Adicionar</button></div>
+      <div class="item">10 mini Churros – R$6.00 <button onclick="addToCart('10 mini Churros', 6.00)">Adicionar</button></div>
+      <div class="item">20 mini Churros – R$10.00 <button onclick="addToCart('30 mini Churros', 10.00)">Adicionar</button></div>
+      <div class="item">50 mini Churros – R$22.00 <button onclick="addToCart('50 mini Churros', 22.00)">Adicionar</button></div>
     </div>
     
     <div class="menu-category">
