--- a/index.html
+++ b/index.html
@@ -100,15 +100,14 @@
   <section id="menu" class="menu-section">
     <div class="menu-category">
       <h2>Coxinha – R$4,99</h2>
-      <div class="item">Frango com queijo <button onclick="addToCart('Coxinha Frango com Queijo', 4,99)">Adicionar</button></div>
-      <div class="item">Frango com catupiry <button onclick="addToCart('Coxinha Frango com Catupiry', 4,99)">Adicionar</button></div>
+      <div class="item">Frango <button onclick="addToCart('Coxinha de Frango', 4,99)">Adicionar</button></div>
       <div class="item">Bola Mista – R$4,99 <button onclick="addToCart('Bola mista', 4,99)">Adicionar</button></div>
     </div>
 
     <div class="menu-category">
       <h2>Pastel – R$5,99</h2>
       <div class="item">Misto <button onclick="addToCart('Pastel Misto', 5,99)">Adicionar</button></div>
-      <div class="item">Frango com Catupiry <button onclick="addToCart('Pastel Frango com Catupiry', 5,99)">Adicionar</button></div>
+      <div class="item">Frango com Catupir<button onclick="addToCart('Pastel Frango com Catupiry', 5,99)">Adicionar</button></div>
       <div class="item">Queijo <button onclick="addToCart('Pastel de Queijo', 5,99)">Adicionar</button></div>
     </div>
 
@@ -122,9 +121,9 @@
       <div class="item">10 mini Salgados – R$4.99 <button onclick="addToCart('10 mini Salgados', 4,99)">Adicionar</button></div>
       <div class="item">20 mini Salgados – R$9.99 <button onclick="addToCart('20 mini Salgados', 9,99)">Adicionar</button></div>
       <div class="item">30 mini Salgados – R$14.99 <button onclick="addToCart('30 mini Salgados', 14,99)">Adicionar</button></div>
-      <div class="item">10 mini Churros – R$6.00 <button onclick="addToCart('10 mini Churros', 6.00)">Adicionar</button></div>
-      <div class="item">20 mini Churros – R$10.00 <button onclick="addToCart('30 mini Churros', 10.00)">Adicionar</button></div>
-      <div class="item">50 mini Churros – R$22.00 <button onclick="addToCart('50 mini Churros', 22.00)">Adicionar</button></div>
+      <div class="item">10 mini Churros – R$4.49 <button onclick="addToCart('10 mini Churros', 4.49)">Adicionar</button></div>
+      <div class="item">20 mini Churros – R$8.49 <button onclick="addToCart('30 mini Churros', 8.49)">Adicionar</button></div>
+      <div class="item">50 mini Churros – R$21.99 <button onclick="addToCart('50 mini Churros', 22.00)">Adicionar</button></div>
     </div>
     
     <div class="menu-category">
