--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="menu-category">
       <h2>Pastel – R$5,99</h2>
       <div class="item">Misto <button onclick="addToCart('Pastel Misto', 5,99)">Adicionar</button></div>
-      <div class="item">Frango com Catupir<button onclick="addToCart('Pastel Frango com Catupiry', 5,99)">Adicionar</button></div>
+      <div class="item">Frango com Catupiry <button onclick="addToCart('Pastel Frango com Catupiry', 5,99)">Adicionar</button></div>
       <div class="item">Queijo <button onclick="addToCart('Pastel de Queijo', 5,99)">Adicionar</button></div>
     </div>
 
